sandbox/output
TicketDispenserTest.java:51: error: cannot find symbol
        mockTurnNumberSequence.arrangeNextTurnNumber(11);
        ^
  symbol:   variable mockTurnNumberSequence
  location: class TicketDispenserTest
TicketDispenserTest.java:52: error: cannot find symbol
        TicketDispenser dispenser = new TicketDispenser(mockTurnNumberSequence);
                                                        ^
  symbol:   variable mockTurnNumberSequence
  location: class TicketDispenserTest
2 errors
